Initial page base created

--- a/angularApp/src/app/components/template/footer/footer.component.html
+++ b/angularApp/src/app/components/template/footer/footer.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar class="footer">
-    <span>Developed by Pied Piper</span>
+    <span>Developed by Pied Piper Co.</span>
     <i class="pied-piper-green material-icons">audiotrack</i>
 </mat-toolbar>
