--- a/angularApp/src/app/components/template/header/header.component.html
+++ b/angularApp/src/app/components/template/header/header.component.html
@@ -7,7 +7,7 @@
     <span class="title-group">
         <a>
             <i class="material-icons">home</i>
-            Angular Application
+            Pied Piper Rat-Catcher
         </a>
     </span>
 </mat-toolbar>
