--- a/angularApp/src/styles.css
+++ b/angularApp/src/styles.css
@@ -4,5 +4,5 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .pied-piper-green {
-    color: rgb(72, 163, 109)
+    color: rgb(72, 163, 109);
 }
