--- a/angularApp/src/app/components/product/product-create/product-create.component.html
+++ b/angularApp/src/app/components/product/product-create/product-create.component.html
@@ -1,7 +1,17 @@
-<button mat-raised-button (click)="createProduct()" color="primary">
-    Create
-</button>
-
-<button mat-raised-button (click)="cancel()">
-    Cancel
-</button>
+<mat-card>
+    <mat-card-title>New Product</mat-card-title>
+    <form>
+        <mat-form-field>
+            <input matInput type="text" placeholder="Name" [(ngModel)]="product.name" name="name">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput type="number" placeholder="Price ($)" [(ngModel)]="product.price" name="price">
+        </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="createProduct()" color="primary">
+        Create
+    </button>
+    <button mat-raised-button (click)="cancel()">
+        Cancel
+    </button>
+</mat-card>
