--- a/angularApp/src/app/components/product/product-read/product-read.component.html
+++ b/angularApp/src/app/components/product/product-read/product-read.component.html
@@ -9,14 +9,23 @@
         <!-- Price Column -->
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-            <td mat-cell *matCellDef="let row">$ {{row.price}}</td>
+            <td mat-cell *matCellDef="let row">{{row.price | currency: 'USD'}}</td>
+        </ng-container>
+
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
+            <td mat-cell *matCellDef="let row">
+                <a routerLink="/products/update/{{row.id}}"><i class="material-icons">edit</i></a>
+                <a routerLink=""><i class="material-icons">delete</i></a>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="50"
+    <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="10"
         [pageSizeOptions]="[5, 10, 50]">
     </mat-paginator>
 </div>
