--- a/angularApp/src/app/components/template/header/header.component.html
+++ b/angularApp/src/app/components/template/header/header.component.html
@@ -4,10 +4,5 @@
             <img class="logo" src="assets/img/logo.png" alt="logo">
         </a>
     </span>
-    <span class="title-group">
-        <a>
-            <i class="material-icons">home</i>
-            Pied Piper Rat-Catcher
-        </a>
-    </span>
+    <span class="title-group">Pied Piper Rat-Catcher</span>
 </mat-toolbar>
