--- a/angularApp/src/app/components/product/product-create/product-create.component.html
+++ b/angularApp/src/app/components/product/product-create/product-create.component.html
@@ -8,7 +8,7 @@
             <input matInput type="number" placeholder="Price ($)" [(ngModel)]="product.price" name="price">
         </mat-form-field>
     </form>
-    <button mat-raised-button (click)="createProduct()">
+    <button class="create-button" mat-raised-button (click)="createProduct()">
         Create
     </button>
     <button mat-raised-button (click)="cancel()">
