--- a/angularApp/src/app/components/product/product-read/product-read.component.html
+++ b/angularApp/src/app/components/product/product-read/product-read.component.html
@@ -17,7 +17,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
             <td mat-cell *matCellDef="let row">
                 <a routerLink="/products/update/{{row.id}}"><i class="material-icons">edit</i></a>
-                <a routerLink=""><i class="material-icons">delete</i></a>
+                <a routerLink="/products/delete/{{row.id}}"><i class="material-icons">delete</i></a>
             </td>
         </ng-container>
 
