--- a/angularApp/src/app/components/template/header/header.component.html
+++ b/angularApp/src/app/components/template/header/header.component.html
@@ -4,5 +4,10 @@
             <img class="logo" src="assets/img/logo.png" alt="logo">
         </a>
     </span>
-    <span class="title-group">Pied Piper Rat-Catcher</span>
+    <span class="title-group">
+        <a routerLink="{{routeUrl}}">
+            <i class="material-icons">{{icon}}</i>
+            {{title}}
+        </a>
+    </span>
 </mat-toolbar>
