--- a/angularApp/src/app/views/product-crud/product-crud.component.css
+++ b/angularApp/src/app/views/product-crud/product-crud.component.css
@@ -1,5 +1,5 @@
 button {
     margin-bottom: 30px;
-    background-color: rgb(72, 163, 109);
+    background-color: rgb(24, 170, 96, 1);
     color: #FFF;
 }
