--- a/angularApp/src/app/components/product/product-create/product-create.component.css
+++ b/angularApp/src/app/components/product/product-create/product-create.component.css
@@ -9,6 +9,6 @@ button {
 }
 
 .create-button {
-    background-color: rgb(72, 163, 109);
+    background-color: rgb(24, 170, 96, 1);
     color: #FFF;
 }
