--- a/angularApp/src/app/components/template/header/header.component.css
+++ b/angularApp/src/app/components/template/header/header.component.css
@@ -7,10 +7,12 @@
     display: flex;
     align-items: center;
     text-decoration: none;
+    color: rgb(0 0 0 / 87%);
 }
 
 .header .logo {
-    max-height: 32px;
+    max-height: 60px;
+    padding-right: 30px;
 }
 
 .header .title-group {
